k8s/frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: next-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: next-frontend
  template:
    metadata:
      labels:
        app: next-frontend
    spec:
      containers:
        - name: frontend
          image: 837126493345.dkr.ecr.ap-northeast-2.amazonaws.com/team6/frontend:25
          ports:
            - containerPort: 3000
          volumeMounts:
            - name: config-volume
              mountPath: /app/config
              readOnly: true
      volumes:
        - name: config-volume
          configMap:
            name: next-frontend-config
---
apiVersion: v1
kind: Service
metadata:
  name: next-frontend
spec:
  selector:
    app: next-frontend
  ports:
    - port: 80
      targetPort: 3000
