k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: next-frontend-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: team6.goorm.training
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: next-frontend
            port:
              number: 3000
  tls:
  - hosts:
      - team6.goorm.training
    secretName: team6-tls
